--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div><h1>Testando o teste testado</h1></div>
 
-    <<script type="text/javascript" async src="https://d2umgtt5tsqx05.cloudfront.net/js/loader-scripts/fdfef3ec-67dc-4be3-8717-e4d61a131b2f-loader.js" ></script>
+    <script type="text/javascript" async src="https://d2umgtt5tsqx05.cloudfront.net/js/loader-scripts/fdfef3ec-67dc-4be3-8717-e4d61a131b2f-loader.js" ></script>
     <div role="main" id="testing-monitoramento-4743cc0399161cf13ea0"></div><script type="text/javascript" src="https://d2umgtt5tsqx05.cloudfront.net/js/rdstation-forms/stable/rdstation-forms.min.js"></script><script type="text/javascript"> new RDStationForms('testing-monitoramento-4743cc0399161cf13ea0', 'null').createForm();</script>
 </body>
 </html>
